--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -4,7 +4,7 @@ backport 1.x:
 
 # Any github-actions-related changes labeling as infra
 infra:
-- '.github/*'
+- any: ['.github/*', '.github/*/*']
 
 # Any changed markdown files or release notes changes labeling as documentation
 documentation:
