Add github glob to backport label
Signed-off-by: Tyler Ohlsen <ohltyler@amazon.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -9,6 +9,7 @@ backport 1.x:
 - '*/**/**/**/**/**/*'
 - '*/**/**/**/**/**/**/*'
 - '*/**/**/**/**/**/**/**/*'
+- '.github/**/*'
 
 # Any github-actions-related changes labeling as infra
 infra:
