--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -9,13 +9,18 @@ backport 1.x:
 - '*/**/**/**/**/**/*'
 - '*/**/**/**/**/**/**/*'
 - '*/**/**/**/**/**/**/**/*'
+- '*/**/**/**/**/**/**/**/**/*'
 - '.github/**/*'
 
-# Any github-actions-related changes labeling as infra
-infra:
+# Adding "github actions" label to files in .github or its subdirectories
+github actions:
 - '.github/**/*'
 
-# Any changed markdown files or release notes changes labeling as documentation
+# Adding "documentation" label to markdown files or updating release notes
 documentation:
 - '*.md'
 - 'release-notes/*'
+
+# Adding a "dependencies" label when yarn.lock is updated
+dependencies:
+- 'yarn.lock'
