--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,6 +1,6 @@
 name: "Pull Request Labeler"
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - main
 
@@ -8,6 +8,14 @@ jobs:
   label:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/labeler@v4
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: GitHub App token
+          id: github_app_token
+          uses: tibdex/github-app-token@v1.5.0
+          with:
+            app_id: ${{ secrets.APP_ID }}
+            private_key: ${{ secrets.APP_PRIVATE_KEY }}
+            installation_id: 22958780
+      - name: Label
+        uses: actions/labeler@v4
+        with:
+          repo-token: ${{ steps.github_app_token.outputs.token }}
