Add private installation ID to test in forked repo
Signed-off-by: Tyler Ohlsen <ohltyler@amazon.com>

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.APP_PRIVATE_KEY }}
-          installation_id: 22958780
+          installation_id: ${{ secrets.APP_INSTALLATION_ID }}
       - name: Label
         uses: actions/labeler@v4
         with:
