--- a/.github/workflows/build-and-test-workflow.yml
+++ b/.github/workflows/build-and-test-workflow.yml
@@ -1,4 +1,4 @@
-name: Unit tests workflow
+name: Build and test workflow
 on:
   push:
     branches:
@@ -9,12 +9,34 @@ on:
 env:
   OPENSEARCH_DASHBOARDS_VERSION: 'main'
 jobs:
-  tests:
-    name: Run unit tests
+  Get-CI-Image-Tag:
+    runs-on: ubuntu-latest
+    outputs:
+      ci-image-version-linux: ${{ steps.step-ci-image-version-linux.outputs.ci-image-version-linux }}
+    steps:
+      - name: Install crane
+        uses: iarekylew00t/crane-installer@v1
+        with:
+          crane-release: v0.15.2
+      - name: Checkout opensearch-build repository
+        uses: actions/checkout@v2
+        with:
+          repository: "opensearch-project/opensearch-build"
+          ref: "main"
+          path: "opensearch-build"
+      - name: Get ci image version from opensearch-build repository scripts
+        id: step-ci-image-version-linux
+        run: |
+          crane version
+          CI_IMAGE_VERSION=`opensearch-build/docker/ci/get-ci-images.sh -p rockylinux8 -u opensearch-dashboards -t build | head -1`          echo $CI_IMAGE_VERSION
+          echo "ci-image-version-linux=$CI_IMAGE_VERSION" >> $GITHUB_OUTPUT
+  build-and-test:
+    name: Build the plugin and run unit tests
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
+    needs: Get-CI-Image-Tag
     steps:
       # Enable longer filenames for windows
       - name: Enable longer filenames
@@ -48,7 +70,10 @@ jobs:
         run: |
           cd OpenSearch-Dashboards/plugins/anomaly-detection-dashboards-plugin
           yarn osd bootstrap
-      - name: Run tests
+      - name: Build the plugin
+          cd OpenSearch-Dashboards/plugins/anomaly-detection-dashboards-plugin
+          yarn build
+      - name: Run unit tests
         run: |
           cd OpenSearch-Dashboards/plugins/anomaly-detection-dashboards-plugin
           yarn run test:jest --coverage
